<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/logoColor"
    tools:context=".PlaceDetail">

    <TextView
        android:id="@+id/placeDetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/PlaceDetail"
        android:textColor="@color/white"
        android:layout_marginTop="40dp"
        app:layout_constraintBottom_toTopOf="@+id/PlacePhotoDetail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textSize="24sp"/>

    <ImageView
        android:contentDescription="@string/placephoto"
        android:id="@+id/PlacePhotoDetail"
        android:layout_width="match_parent"
        android:layout_height="226dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/default_event"
        app:layout_constraintBottom_toTopOf="@id/textDescription"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/placeDetail"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="NotSibling" />

    <TextView
        android:id="@+id/textViewDetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bar_21"
        android:shadowColor="@color/black"
        android:shadowDx="10"
        android:shadowDy="10"
        android:shadowRadius="5"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@id/PlacePhotoDetail"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="60dp"
        android:layout_marginBottom="10dp" />

    <RatingBar
        android:id="@+id/ratingBarDetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="168dp"
        android:layout_marginTop="28dp"
        android:max="5"
        android:numStars="5"
        android:progressBackgroundTint="@color/black"
        android:progressTint="@color/white"
        android:rating="3"
        android:stepSize="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/PlacePhotoDetail" />

    <TextView
        android:id="@+id/textDescription"
        app:layout_constraintTop_toBottomOf="@id/PlacePhotoDetail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/about_bar21"
        android:textAlignment="center"
        android:gravity="center"
        android:textColor="@color/white"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/textAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/address"
        app:layout_constraintTop_toBottomOf="@id/textDescription"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="12sp" />


    <Button
        android:id="@+id/visitDetail"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/button_design"
        android:text="@string/visit"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/bottomNavigationView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textAddress" />




    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigationView"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        app:itemIconSize="125px"
        app:itemIconTint="#ffff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/bottom_nav_menu" />

</androidx.constraintlayout.widget.ConstraintLayout>