<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".SignInActivity">

    <EditText
        android:id="@+id/editTextUName"
        android:layout_width="229dp"
        android:layout_height="63dp"
        android:background="@drawable/button_design"
        android:ems="10"
        android:fontFamily="@font/roboto_medium"
        android:gravity="center"
        android:inputType="textPersonName"
        android:hint="@string/username"
        android:textColor="@color/white"
        android:textColorHint="@color/gray"
        app:layout_constraintBottom_toTopOf="@+id/editTextPwd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.936" />

    <EditText
        android:id="@+id/editTextPwd"
        android:layout_width="229dp"
        android:layout_height="63dp"
        android:layout_marginBottom="64dp"
        android:background="@drawable/button_design"
        android:gravity="center"
        android:ems="10"
        android:hint="@string/password"
        android:textColorHint="@color/gray"
        android:inputType="textPassword"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/log_in_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/log_in_button"
        android:layout_width="111dp"
        android:layout_height="50dp"
        android:layout_marginBottom="204dp"
        android:background="@drawable/button_design"
        android:backgroundTint="@color/white"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/login"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/dontHaveAcc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:textSize="15sp"
        android:text="@string/dontHave"
        app:layout_constraintTop_toBottomOf="@id/log_in_button"
        android:textAlignment="center"
        android:textColor="@color/white" />

</androidx.constraintlayout.widget.ConstraintLayout>