<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/logoColor"
    tools:context=".AddNewEvent"
    tools:menu="@menu/bottom_nav_menu">


    <EditText
        android:id="@+id/birthday"
        android:layout_width="229dp"
        android:layout_height="63dp"
        android:background="@drawable/button_design"
        android:clickable="false"
        android:cursorVisible="false"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:gravity="center"
        android:hint="@string/when"
        android:textColor="@color/white"
        android:textColorHint="@color/gray"
        app:layout_constraintBottom_toTopOf="@id/TimeInputs"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/placeInput" />

    <EditText
        android:id="@+id/placeInput"
        android:maxLength="15"
        android:layout_width="229dp"
        android:layout_height="63dp"
        android:background="@drawable/button_design"
        android:ems="10"
        android:fontFamily="@font/roboto_medium"
        android:gravity="center"
        android:hint="@string/place"
        android:inputType="textPersonName"
        android:textColor="@color/white"
        android:textColorHint="@color/gray"
        app:layout_constraintBottom_toTopOf="@id/birthday"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.148" />

    <EditText
        android:id="@+id/TimeInputs"
        android:layout_width="229dp"
        android:layout_height="63dp"
        android:background="@drawable/button_design"
        android:ems="10"
        android:clickable="false"
        android:cursorVisible="false"
        android:focusable="false"
        android:fontFamily="@font/roboto_medium"
        android:gravity="center"
        android:hint="@string/Time"
        android:inputType="textPersonName"
        android:textColor="@color/white"
        android:textColorHint="@color/gray"
        app:layout_constraintBottom_toTopOf="@id/TitleInputs"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/birthday"
        app:layout_constraintVertical_bias="0.455" />

    <EditText
        android:id="@+id/TitleInputs"
        android:layout_width="229dp"
        android:layout_height="63dp"
        android:background="@drawable/button_design"
        android:clickable="false"
        android:maxLength="15"
        android:cursorVisible="false"
        android:ems="10"
        android:fontFamily="@font/roboto_medium"
        android:gravity="center"
        android:hint="@string/Title"
        android:inputType="textPersonName"
        android:textColor="@color/white"
        android:textColorHint="@color/gray"
        app:layout_constraintBottom_toTopOf="@id/DescriptionInputs"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TimeInputs" />

    <EditText
        android:id="@+id/DescriptionInputs"
        android:layout_width="229dp"
        android:layout_height="180dp"
        android:background="@drawable/button_design"
        android:clickable="false"
        android:cursorVisible="false"
        android:maxLength="25"
        android:ems="10"
        android:fontFamily="@font/roboto_medium"
        android:gravity="center"
        android:hint="@string/Description"
        android:inputType="textPersonName"
        android:textColor="@color/white"
        android:textColorHint="@color/gray"
        app:layout_constraintBottom_toTopOf="@+id/add_event_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TitleInputs"
        app:layout_constraintVertical_bias="0.455" />

    <Button
        android:id="@+id/add_event_button"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:background="@drawable/button_design"
        android:backgroundTint="@color/white"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/createevent"
        android:textSize="12sp"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@id/bottomNavigationView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/DescriptionInputs" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigationView"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:itemIconTint="#ffff"
        app:itemIconSize="125px"
        app:menu="@menu/bottom_nav_menu"/>
</androidx.constraintlayout.widget.ConstraintLayout>